--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 
-        <script src="js/jquery.inview.min.js"></script>
+        <script type="text/javascript" src="js/jquery.inview.min.js"></script>
 
-        <script src="js/index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
 
-
-        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
 
     </head>
 
