--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 
-        <script type="text/javascript" src="js/jquery.inview.min.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
