--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 
         <script type="text/javascript" src="js/jquery.js"></script>
 
