--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <title>Conkret Live - Accueil </title>
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
 
         <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 
