--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
         <title>Conkret Live - Accueil </title>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-
-        <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-
-        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
 
