--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -11,11 +10,16 @@
 
         <title>Conkret Live - Accueil </title>
 
-        <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 
-        <script type="text/javascript" src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
+        <script src="js/jquery.inview.min.js"></script>
+
+        <script src="js/index.js"></script>
+
+
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
 
     </head>
 
@@ -244,4 +248,3 @@
                        /_/// |_|______|_|
 
                         -->
-
