--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
+
         <script src="js/jquery.inview.min.js"></script>
 
         <script src="js/index.js"></script>
