--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" media="screen and (max-width: 720px)" href="petite_resolution.css" />
-        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+        <link rel="stylesheet" href="flickity.css">
 
         <title>Conkret Live - Accueil </title>
 
@@ -19,7 +19,7 @@
         <script src="js/index.js"></script>
 
 
-        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
+        <script src="js/flickity.pkgd.min"></script>
 
     </head>
 
@@ -68,7 +68,7 @@
             <div class='categorie categorie1'>
                 <h1>Accueil</h1>
 
-                <div class="carousel" data-flickity='{ "wrapAround": true }'>
+                <div class="carousel" data-flickity='{ "cellAlign": "left", "contain": true,wrapAround": true }'>
 
                     <div class="carousel-cell">
                         <img src="Images/Diapo1.jpg">
