--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class='categorie categorie1'>
                 <h1>Accueil</h1>
 
-                <div class="carousel" data-flickity='{ "cellAlign": "left", "contain": true,wrapAround": true }'>
+                <div class="carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
 
                     <div class="carousel-cell">
                         <img src="Images/Diapo1.jpg">
