--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" media="screen and (max-width: 720px)" href="petite_resolution.css" />
         <link rel="stylesheet" href="flickity.css">
