--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                     CONKRETE LIVE vous accueille du lundi au vendredi de 9h00 à 12h00 et de 14h00 à 19h00, ainsi que le samedi matin sur rendez-vous.
 
                     
-                    Adresse mail: k.ramos@conkrete.com</br>
-                    Téléphone: 0698162229</br>
-                    adresse: 11 avenue Archimède Zi Pessac Bersol Parc Archimede 33600 PESSAC </br>
+                    Adresse mail: k.ramos@conkrete.com<br>
+                    Téléphone: 0698162229<br>
+                    adresse: 11 avenue Archimède Zi Pessac Bersol Parc Archimede 33600 PESSAC <br>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8900727378823!2d-0.6435993388681739!3d44.783046376208596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d92844784653%3A0x49e3b65ce88823da!2sCONKRETE+LIVE!5e0!3m2!1sfr!2sfr!4v1485106565041" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8900727378823!2d-0.6435993388681739!3d44.783046376208596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d92844784653%3A0x49e3b65ce88823da!2sCONKRETE+LIVE!5e0!3m2!1sfr!2sfr!4v1485106565041"  height="600" style="border:0" allowfullscreen width="100%"></iframe>
                 </p>
                 <input class='button'type="button" value="Mentions Legal">
                 <div id='mention'>
@@ -143,12 +143,12 @@
                   <p>      
                             Nom ou Raison sociale : Conkrete Live
 
-                                N° Registre Commerce: 497910588</br>
-                                Mentions RCS: Bordeaux</br>
-                                Adresse siège social: 11 avenue Archimède Zi Pessac Bersol Parc Archimede 33600 PESSAC</br>
-                                N° SIRET de l’établissement: 497910588 000 35</br>
-                                N° d'assujetissement à la TVA: FR 64 497910588</br>
-                                Directeur de rédaction et de publication: CONKRETE LIVE</br>
+                                N° Registre Commerce: 497910588<br>
+                                Mentions RCS: Bordeaux<br>
+                                Adresse siège social: 11 avenue Archimède Zi Pessac Bersol Parc Archimede 33600 PESSAC<br>
+                                N° SIRET de l’établissement: 497910588 000 35<br>
+                                N° d'assujetissement à la TVA: FR 64 497910588<br>
+                                Directeur de rédaction et de publication: CONKRETE LIVE<br>
                                 Site heberge par : X
                 </p>
                 </div>
