--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                     <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8900727378823!2d-0.6435993388681739!3d44.783046376208596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d92844784653%3A0x49e3b65ce88823da!2sCONKRETE+LIVE!5e0!3m2!1sfr!2sfr!4v1485106565041"  height="600" style="border:0" allowfullscreen ></iframe>
                 </p>
-                <input class='button'type="button" value="Mentions Legal">
+                <input class='button' type="button" value="Mentions Legal">
                 <div id='mention'>
                     <h2 id='mention_legales'>Mentions legales</h2>   
                   <p>      
@@ -159,11 +159,11 @@
 
             <div id='responsive'>
 
-                <img src="Images/LOGO conkrete live vector HD.png" id='logo' class='element' alt="logo-conkrete-live">
+                <img src="Images/LOGO_conkrete_live_vector_HD.png" id='logo' class='element' alt="logo-conkrete-live">
 
-                <img src='Images/Etiquettesgauche/Synopsis Gauche.png'id='Synopsis' class='element' alt="Etiquette-synopsis">
-                <img src='Images/Etiquettesgauche/Services Gauche.png'id='Services' class='element' alt="etiquette-services">
-                <img src="Images/Etiquettesgauche/Contacts Gauche.png"id='Contacts' class='element' alt="etiquette-contacts">
+                <img src='Images/Etiquettesgauche/Synopsis_Gauche.png' id='Synopsis' class='element' alt="Etiquette-synopsis">
+                <img src='Images/Etiquettesgauche/Services_Gauche.png' id='Services' class='element' alt="etiquette-services">
+                <img src="Images/Etiquettesgauche/Contacts_Gauche.png" id='Contacts' class='element' alt="etiquette-contacts">
                        
                 <div id='BlocTexte2'>
 
@@ -226,7 +226,7 @@
                 </div>
             
 
-                <img src="Images/Bandeau Rouge.png" id='bandeau' class='element' alt="Bandeau-rouge">
+                <img src="Images/Bandeau_Rouge.png" id='bandeau' class='element' alt="Bandeau-rouge">
 
             </div>
 
