--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 
 
-           <section id ='BlocTexte'>
-                <div class='categorie categorie1'>
+           <div id ='BlocTexte'>
+                <section class='categorie categorie1'>
                     <h1>Accueil</h1>
 
                     <div class="main-carousel">
@@ -83,7 +83,8 @@
                         </div>
 
                     </div> 
-            </section>
+                </section>
+            </div>
 
             <section class='categorie categorie2'>
                  
