--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <link rel="stylesheet" media="screen and (max-width: 720px)" href="petite_resolution.css" />
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
-        <title>Conkret Live - Accueil </title>
+        <title>Conkret Live, la sonorisation et l'éclairage pour tous vos événements.</title>
+        <meta name="description" content="Conkrete Live s’est spécialisé dans la sonorisation, l’éclairage, lumière, structure et vidéo. Notre expérience et notre savoir faire vous accompagnera tout au long de l’événement pour un rendu unique. 
+        Un événement repose sur une atmosphère et une émotion le rendant inoubliable.">
+        <meta name="keywords" content="conkrete, live, conkrete live, sonorisation, lumière, structure,
+         scène, son, ingénieur, technicien, light, sound, show, spectacle, prestation">
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 
@@ -180,7 +184,7 @@
                     Des concerts grand public aux spectacles de plein air, notre exigence est toujours la même
                     répondant aussi aux attentes d’organisateurs plus modestes. De la <strong>sonorisation</strong> d’un artiste de
                     renom à une fête de famille, la préparation sera toujours soignée.
-                    Un <strong>événement<strong> repose sur une atmosphère et une émotion qui le rendent inoubliable. Nous
+                    Un <strong>événement</strong> repose sur une atmosphère et une émotion qui le rendent inoubliable. Nous
                     sommes à votre écoute pour apporter à votre manifestation sa configuration optimale avec le
                     budget le plus étudié.
                 </p>
