--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="flickity.css" />
         <link rel="stylesheet" media="screen and (max-width: 720px)" href="petite_resolution.css" />
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet"> 
@@ -134,15 +135,18 @@
                 <section class='categorie categorie4'>
                     <h1>Contacts</h1>
                     <p>
-                        <strong>CONKRETE LIVE</strong> vous accueille du lundi au vendredi de 9h00 à 12h00 et de 14h00 à 19h00,<br>ainsi que le samedi matin sur rendez-vous.<br>
+                        <strong>CONKRETE LIVE</strong> vous accueille du lundi au vendredi de 9h00 à 12h00 et de 14h00 à 19h00, ainsi que le samedi matin sur rendez-vous.<br>
+                    </p>
 
-                        
+                <div id ='infos_contact'>
+                    <p>
                         <em>Adresse mail</em>: k.ramos@conkrete.com<br>
                         <em>Téléphone<em/>: 0698162229<br>
                         <em>Adresse</em>: 11 avenue Archimède <br>Zi Pessac Bersol Parc Archimede 33600 PESSAC <br>
-
-                        <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8900727378823!2d-0.6435993388681739!3d44.783046376208596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d92844784653%3A0x49e3b65ce88823da!2sCONKRETE+LIVE!5e0!3m2!1sfr!2sfr!4v1485106565041"  height="600" style="border:0" allowfullscreen ></iframe>
                     </p>
+                        <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8900727378823!2d-0.6435993388681739!3d44.783046376208596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d92844784653%3A0x49e3b65ce88823da!2sCONKRETE+LIVE!5e0!3m2!1sfr!2sfr!4v1485106565041" style="border:0" allowfullscreen ></iframe>
+                    
+                </div>
                     <input class='button' type="button" value="Mentions Legal">
 
                     <div id='mention'>
@@ -221,9 +225,9 @@
                     <p>Nous vous accueillons du lundi au vendredi de 9h00 à 12h00 et de 14h00 à 19h00,<br>ainsi
                     que le samedi matin sur rendez-vous.<br></p> 
                     <h2>Gérant et chargé d’affaires :</h2>
-                    <p>Krystof MEREUZE : 06 98 16 22 29 / k.ramos@conkrete.com</p>
+                    <p>Krystof MEREUZE : 06 98 16 22 29 <br>k.ramos@conkrete.com</p>
                     <h3>Technicien logistique :</h3>
-                    <p>Alexandre DA SILVA : 06 33 52 77 41 / a.dasilva@conkrete.com</p>
+                    <p>Alexandre DA SILVA : 06 33 52 77 41  <br>a.dasilva@conkrete.com</p>
                     <h4>Le bureau :</h4>
                     <p>Coordonées GPS : Latitude : 44°78’ N / Longitude: -0°64’ W<br>
                     11 avenue Archimède, Cellule 7 <br>
