--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <h3>Technicien logistique :</h3>
                     <p>Alexandre DA SILVA : 06 33 52 77 41  <br>a.dasilva@conkrete.com</p>
                     <h4>Le bureau :</h4>
-                    <p>Coordonées GPS : Latitude : 44°78’ N / Longitude: -0°64’ W<br>
+                    <p>Coordonées GPS : <br>Latitude : 44°78’ N <br>Longitude: -0°64’ W<br>
                     11 avenue Archimède, Cellule 7 <br>
                     ZI Pessac Bersol 1<br>
                     33600 Pessac<br>
