--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
         <div id='etiquette8' class='etiquette'> </div>
 
-    
-        <img src="Images/facebook.png" class="facebook" alt="logo-facebook">
-
+        <a href="https://www.facebook.com/Conkrete-Live-198411500362889/?fref=ts">
+            <img src="Images/facebook.png" class="facebook" alt="logo-conkrete-livefacebook">
+        </a>
         <img src="Images/LED.png"  class="LED LED1" alt="image-de-LED">
 
         <img src="Images/LED.png"  class="LED LED2" alt="image-de-LED">
