--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <br>Longitude: -0°64’ W<br>
                     </p>
 
-                    <img src="Images/facebook.png" class="facebook" alt="logo-conkrete-livefacebook">
+                    <img src="Images/LED.png" class="facebook" alt="logo-conkrete-livefacebook">
                     <h3>Gérant et chargé d’affaires :</h3>
                     <p>Krystof MEREUZE : 06 98 16 22 29 <br>k.ramos@conkrete.com</p>
                     <h4>Technicien logistique :</h4>
