--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div id='etiquette8' class='etiquette'> </div>
         <a href="https://www.facebook.com/Conkrete-Live-198411500362889/?ref=ts&fref=ts">
-            <img src="Images/conkrete-live-facebook.png" class="facebook" alt="logo-conkrete-livefacebook">
+            <img src="Images/Facebook.png" class="facebook" alt="logo-conkrete-livefacebook">
         </a>
         <img src="Images/LED.png"  class="LED LED1" alt="image-de-LED">
 
