--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         pointues des organisateurs de spectacles, d’<em>événements</em> et de manifestations, son équipe allie un
                         professionnalisme indiscutable à une grande capacité d’écoute et d’adaptation.<br><br>
                         Maîtrisant techniques et technologies les plus récentes en matière de <em>son</em>, <em>lumière</em> et <em>vidéo</em>, leurs
-                        prestations leur ont vtalu un retour sur image de premier plan.
+                        prestations leur ont valu un retour sur image de premier plan.
                         Des <em>concerts</em> grand public aux spectacles de plein air, notre exigence est toujours la même
                         répondant aussi aux attentes d’organisateurs plus modestes. <br><br>De la <strong>sonorisation</strong> d’un artiste de
                         renom à une fête de famille, la préparation sera toujours soignée.
