--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <body>
 
+        <a href="https://www.facebook.com/Conkrete-Live-198411500362889/?ref=ts&fref=ts">
+            <img src="Images/fb.png" alt="logo" class="fb">
+        </a>
+
         <div id='etiquette1' class='etiquette'> </div>
 
         <div id='etiquette2' class='etiquette'> </div>
