--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
 
        
-            <img src="Images/fb.png" alt="logo" class="fb">
+            <img src="Images/Facebook.png" alt="logo" class="fb">
        
 
         <div id='etiquette1' class='etiquette'> </div>
