--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
        
             <img src="Images/Facebook.png" alt="logo" class="fb">
+            <img src="Images/croixrouge.png" alt="logo" class="fb">
        
 
         <div id='etiquette1' class='etiquette'> </div>
