--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
 
        
-            <img src="Images/Facebook.png" alt="logo" class="fb">
+            <img src="Images/logo.png" alt="logo" class="fb">
             <img src="Images/croixrouge.png" alt="logo" class="fb">
        
 
